--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <title>Santa's Trees | Kyiv</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./img/santa.png" type="image/x-icon">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inria+Serif&family=Montserrat:wght@500;600&display=swap" rel="stylesheet">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
+    />
 </head>
 <body>
     <header>
@@ -50,6 +56,28 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="main__container">
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="main__fill_text">
+                        <div class="main__fill_title">Santa's <br> Trees!</div>
+                        <div class="main__fill_subtitle">Працюємо цілодобово та без вихідних задля вашого комфорту.</div>
+                        <div class="main__fill_sub">Доставка по районах та містах!</div>
+                        <button class="main__button_submit">Замовити</button>
+                    </div>
+                    <div class="main__background_photo"></div>
+                  </div>
+                  <div class="swiper-slide">Slide 2</div>
+                  <div class="swiper-slide">Slide 3</div>
+                </div>
+                
+                <div class="swiper-pagination"></div>
+              </div>
+        </div>
+    </main>
 </body>
 </html>
 <script src="./js/main.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
