--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inria+Serif&family=Montserrat:wght@500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600&display=swap" rel="stylesheet">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
@@ -31,14 +31,11 @@
             </select>
             <nav class="header__nav">
                 <a href="#" class="header__home header__a">Головна</a>
-                <a href="#" class="header__delivery header__a">Доставка</a>
+                <a href="#" class="header__catalog header__a">Каталог</a>
                 <a href="#" class="header__about header__a">Про нас</a>
                 <div class="dot"></div>
             </nav>
-            <div class="header__phone">
-                <div class="header_call"></div>
-                <a href="tel:+380984145710" class="header__a">+38 098 414 57 10</a>
-            </div>
+                <a href="#" class="header__a">+38 (067) 436 61 27</a>
             <div class="header__more">
                 <div class="header__fill header__bell_hover">
                     <div class="header__bell"></div>
@@ -67,16 +64,163 @@
                         <div class="main__fill_sub">Доставка по районах та містах!</div>
                         <button class="main__button_submit">Замовити</button>
                     </div>
-                    <div class="main__background_photo"></div>
+                    <div class="main__fill_photo"></div>
                   </div>
-                  <div class="swiper-slide">Slide 2</div>
-                  <div class="swiper-slide">Slide 3</div>
+                  <div class="swiper-slide">
+                    <div class="main__banner">
+                        <div class="main__banner_subtitle">Peaceful sky above overhad!</div>
+                        <div class="main__banner_title">Happy New Year!</div>
+                    </div>
+                  </div>
+                  
                 </div>
                 
                 <div class="swiper-pagination"></div>
               </div>
+              <section class="main__catalog">
+                <h1 class="main__h1">Santa's Catalog!</h1>
+                <div class="main__filtr">
+                    <div class="main__filtr_item main__actived" id="all">Всі</div>
+                    <div class="main__filtr_item">Зелені</div>
+                    <div class="main__filtr_item">Білі</div>
+                    <div class="main__filtr_item">З прикрасами</div>
+                    <div class="main__filtr_item">Без прикрас</div>
+                </div>
+                <div class="main__catalog_wrap">
+                    <div class="main__catalog_item">
+                        <div class="main__photo">
+                            <div class="main__photo_fill"></div>
+                        </div>
+                        <div class="main__item_title">Ялинка з прикрасами #0001</div>
+                        <div class="main__item_subtitle">Вага:<div class="main__item_color"> 1.8кг</div></div>
+                        <div class="main__item_subtitle">Ширина: <span class="main__item_color">60см</span></div>
+                        <div class="main__item_subtitle">Висота: <span class="main__item_color">2м</span></div>
+                        <div class="main__item_subtitle">2200грн</div>
+                        <div class="main__item_subtitle">1800грн</div>
+                        <div class="main__buttons">
+                            <div class="main__item_submit">Придбати</div>
+                            <div class="main__item_favourite"></div>
+                        </div>
+                    </div>
+                    <div class="main__catalog_item">
+                        <div class="main__photo">
+                            <div class="main__photo_fill"></div>
+                        </div>
+                        <div class="main__item_title">Ялинка з прикрасами #0001</div>
+                        <div class="main__item_subtitle">Вага:<div class="main__item_color"> 1.8кг</div></div>
+                        <div class="main__item_subtitle">Ширина: <span class="main__item_color">60см</span></div>
+                        <div class="main__item_subtitle">Висота: <span class="main__item_color">2м</span></div>
+                        <div class="main__item_subtitle">2200грн</div>
+                        <div class="main__item_subtitle">1800грн</div>
+                        <div class="main__buttons">
+                            <div class="main__item_submit">Придбати</div>
+                            <div class="main__item_favourite"></div>
+                        </div>
+                    </div>
+                    <div class="main__catalog_item">
+                        <div class="main__photo">
+                            <div class="main__photo_fill"></div>
+                        </div>
+                        <div class="main__item_title">Ялинка з прикрасами #0001</div>
+                        <div class="main__item_subtitle">Вага:<div class="main__item_color"> 1.8кг</div></div>
+                        <div class="main__item_subtitle">Ширина: <span class="main__item_color">60см</span></div>
+                        <div class="main__item_subtitle">Висота: <span class="main__item_color">2м</span></div>
+                        <div class="main__item_subtitle">2200грн</div>
+                        <div class="main__item_subtitle">1800грн</div>
+                        <div class="main__buttons">
+                            <div class="main__item_submit">Придбати</div>
+                            <div class="main__item_favourite"></div>
+                        </div>
+                    </div>
+                    <div class="main__catalog_item">
+                        <div class="main__photo">
+                            <div class="main__photo_fill"></div>
+                        </div>
+                        <div class="main__item_title">Ялинка з прикрасами #0001</div>
+                        <div class="main__item_subtitle">Вага:<div class="main__item_color"> 1.8кг</div></div>
+                        <div class="main__item_subtitle">Ширина: <span class="main__item_color">60см</span></div>
+                        <div class="main__item_subtitle">Висота: <span class="main__item_color">2м</span></div>
+                        <div class="main__item_subtitle">2200грн</div>
+                        <div class="main__item_subtitle">1800грн</div>
+                        <div class="main__buttons">
+                            <div class="main__item_submit">Придбати</div>
+                            <div class="main__item_favourite"></div>
+                        </div>
+                    </div>
+                    <div class="main__catalog_item">
+                        <div class="main__photo">
+                            <div class="main__photo_fill"></div>
+                        </div>
+                        <div class="main__item_title">Ялинка з прикрасами #0001</div>
+                        <div class="main__item_subtitle">Вага:<div class="main__item_color"> 1.8кг</div></div>
+                        <div class="main__item_subtitle">Ширина: <span class="main__item_color">60см</span></div>
+                        <div class="main__item_subtitle">Висота: <span class="main__item_color">2м</span></div>
+                        <div class="main__item_subtitle">2200грн</div>
+                        <div class="main__item_subtitle">1800грн</div>
+                        <div class="main__buttons">
+                            <div class="main__item_submit">Придбати</div>
+                            <div class="main__item_favourite"></div>
+                        </div>
+                    </div>
+                    <div class="main__catalog_item">
+                        <div class="main__photo">
+                            <div class="main__photo_fill"></div>
+                        </div>
+                        <div class="main__item_title">Ялинка з прикрасами #0001</div>
+                        <div class="main__item_subtitle">Вага:<div class="main__item_color"> 1.8кг</div></div>
+                        <div class="main__item_subtitle">Ширина: <span class="main__item_color">60см</span></div>
+                        <div class="main__item_subtitle">Висота: <span class="main__item_color">2м</span></div>
+                        <div class="main__item_subtitle">2200грн</div>
+                        <div class="main__item_subtitle">1800грн</div>
+                        <div class="main__buttons">
+                            <div class="main__item_submit">Придбати</div>
+                            <div class="main__item_favourite"></div>
+                        </div>
+                    </div>
+                </div>
+              </section>
+              <section class="main__about">
+                <h1 class="main__h1">About Santa's!</h1>
+                <div class="main__about_history">
+                    <div class="main__about_title">З чого усе починалось...</div>
+                    <div class="main__about_subtitle">Компанія з продажу декоративних ялинок бере свій початок у далекому 2004 році. У той час немало людей займалось роздрібною торгівлею іграшок: ляльки, машинки та інші. Серед них майже не було тих, хто міг похизуватись якісним товаром як ялинка. <br> Ми - прості хлопці, які спробували відтворити нашу мрію і те як ми її бачимо. Спочатку закуповувавши товар неодноразово пробували продавати штучні ялинки на ринках або вокзалах. Всього нас було четверо. Двоє з нас займались купівлею та продажем, а інші двоє рекламою серед друзів та знайомих. І всьоголиш за якихось 18 років, все ж таки ми змогли відтворити нашу мрію.</div>
+                </div>
+              </section>
         </div>
     </main>
+    <footer>
+        <div class="footer__container">
+            <div class="footer_block">
+                <div class="footer__logo_fill">
+                    <div class="footer__logo"></div>
+                    <div class="footer__logo_text">Santa's<br> Trees!</div>
+                </div>
+                <div class="footer__text_rights">©Santa's Trees! All rights reserved.</div>
+            </div>
+            <div class="footer_block">
+                <div class="footer__text_title">Навігація:</div>
+                <a href="#" class="footer__a">Головна</a>
+                <a href="#" class="footer__a">Каталог</a>
+                <a href="#" class="footer__a">Про нас</a>
+            </div>
+            <div class="footer_block">
+                <div class="footer__text_title">Оформити замовлення:</div>
+                <div class="footer__text_subtitle">+38 (067) 436 61 27</div>
+                <div class="footer__text_subtitle">+38 (067) 436 61 27</div>
+                <div class="footer__text_subtitle">+38 (067) 436 61 27</div>
+            </div>
+            <div class="footer_block">
+                <div class="footer__text_title">Час роботи:</div>
+                <div class="footer__text_subtitle">з 11:00 до 23:00</div>
+                <div class="footer__text_subtitle">з 1:00 до 8:00</div>
+            </div>
+            <div class="footer_block">
+                <div class="footer__item_master"></div>
+                <div class="footer__item_visa"></div>
+                <div class="footer__item_privat"></div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
 <script src="./js/main.js"></script>
