add new changes

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
                     <div class="header__basket"></div>
                 </div>
             </div>
+            <div class="menu-btn">
+                <div class="menu-btn__burger">
+            </div>
         </div>
     </header>
     <main>
@@ -68,8 +71,17 @@
                   </div>
                   <div class="swiper-slide">
                     <div class="main__banner">
-                        <div class="main__banner_subtitle">Peaceful sky above overhad!</div>
-                        <div class="main__banner_title">Happy New Year!</div>
+                        <div class="main__banner_text">
+                            <div class="main__banner_subtitle">Peaceful sky above overhad!</div>
+                            <div class="main__banner_title">Happy New Year!</div>
+                        </div>
+                        <div class="main__banner_bottom">
+                            <div class="main__banner_fill">
+                                <div class="main__banner_code"></div>
+                                <div class="main__banner_donate">Donate</div>
+                            </div>
+                            <div class="main__banner_subtitle">Help the Ukrainian army!</div>
+                        </div>
                     </div>
                   </div>
                   
@@ -98,8 +110,8 @@
                         <div class="main__item_subtitle">2200грн</div>
                         <div class="main__item_subtitle">1800грн</div>
                         <div class="main__buttons">
+                            <div class="main__item_favourite">До обраного</div>
                             <div class="main__item_submit">Придбати</div>
-                            <div class="main__item_favourite"></div>
                         </div>
                     </div>
                     <div class="main__catalog_item">
@@ -113,8 +125,8 @@
                         <div class="main__item_subtitle">2200грн</div>
                         <div class="main__item_subtitle">1800грн</div>
                         <div class="main__buttons">
+                            <div class="main__item_favourite">До обраного</div>
                             <div class="main__item_submit">Придбати</div>
-                            <div class="main__item_favourite"></div>
                         </div>
                     </div>
                     <div class="main__catalog_item">
@@ -128,8 +140,8 @@
                         <div class="main__item_subtitle">2200грн</div>
                         <div class="main__item_subtitle">1800грн</div>
                         <div class="main__buttons">
+                            <div class="main__item_favourite">До обраного</div>
                             <div class="main__item_submit">Придбати</div>
-                            <div class="main__item_favourite"></div>
                         </div>
                     </div>
                     <div class="main__catalog_item">
@@ -143,8 +155,8 @@
                         <div class="main__item_subtitle">2200грн</div>
                         <div class="main__item_subtitle">1800грн</div>
                         <div class="main__buttons">
+                            <div class="main__item_favourite">До обраного</div>
                             <div class="main__item_submit">Придбати</div>
-                            <div class="main__item_favourite"></div>
                         </div>
                     </div>
                     <div class="main__catalog_item">
@@ -158,8 +170,8 @@
                         <div class="main__item_subtitle">2200грн</div>
                         <div class="main__item_subtitle">1800грн</div>
                         <div class="main__buttons">
+                            <div class="main__item_favourite">До обраного</div>
                             <div class="main__item_submit">Придбати</div>
-                            <div class="main__item_favourite"></div>
                         </div>
                     </div>
                     <div class="main__catalog_item">
@@ -173,8 +185,8 @@
                         <div class="main__item_subtitle">2200грн</div>
                         <div class="main__item_subtitle">1800грн</div>
                         <div class="main__buttons">
+                            <div class="main__item_favourite">До обраного</div>
                             <div class="main__item_submit">Придбати</div>
-                            <div class="main__item_favourite"></div>
                         </div>
                     </div>
                 </div>
