--- a/index.html
+++ b/index.html
@@ -66,28 +66,8 @@
                         <div class="popup__close"></div>
                     </div>
                 </div>
-                <div class="popup__wrapper">
-                    <div class="popup__card">
-                        <div class="popup__card_close_fill">
-                            <div class="popup__card_close"></div>
-                        </div>
-                        <div class="popup__card_left">
-                            <img src="./img/1.png" class="popup__card_photo">
-                            <div class="popup__card_info">
-                                <div class="popup__card_text">Ялинка штучна</div>
-                                <div class="popup__card_id">#0001</div>
-                            </div>
-                        </div>
-                        <div class="popup__card_right">
-                            <div class="popup__card_price">1800грн</div>
-                            <div class="popup__card_addAmount">
-                                <div class="popup__card_add">-</div>
-                                <div class="popup__card_amount">1</div>
-                                <div class="popup__card_add">+</div>
-
-                            </div>
-                        </div>
-                    </div>
+                <div class="popup__wrapper" id="popupwrap">
+                    
                 </div>
             </div>
             <div class="swiper mySwiper">
@@ -129,7 +109,8 @@
                     <div class="main__filtr_item" id="white">Білі</div>
                     <div class="main__filtr_item" id="withJewerly">З прикрасами</div>
                     <div class="main__filtr_item" id="withoutJewerly">Без прикрас</div>
-                    <div class="main__filtr_item" id="price">По ціні</div>
+                    <div class="main__filtr_item" id="pricePlus">Від дешевих до дорогих</div>
+                    <div class="main__filtr_item" id="priceMinus">Від дешевих до дорогих</div>
                     <div class="main__filtr_fill">
                         <div class="main__filter_item_filtr"></div>
                     </div>
