--- a/index.html
+++ b/index.html
@@ -91,10 +91,36 @@
             </div>
             <div class="search__popup" id="search__popup">
                 <div class="search__popup_top">
-                    <input type="search" placeholder="Введіть назву товару та номер якого бажаєте знайти..." class="popup__search_input">
-                    <div class="popup__close_fill">
+                    <input type="search" placeholder="Введіть назву товару або номер якого бажаєте знайти..." class="popup__search_input">
+                    <div class="popup__close_fill" id="search__close">
                         <div class="popup__close"></div>
                     </div>
+                </div>
+                <div class="search__popup_wrap" id="search__wrap">
+                    <!-- <div class="search__card">
+                        <div class="search__card_left">
+                            <img src="./img/1.png" alt="" class="search__card_img">
+                            <div class="search__card_info">
+                                <div class="search__card_text">
+                                    <div class="search__card_name">Name</div>
+                                    <div class="search__card_id">#0001</div>
+                                </div>
+                                <div class="search__card_buttons">
+                                    <div class="search__card_button">До обраного</div>
+                                    <div class="search__card_button">Придбати</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="search__card_right">
+                            <div class="search__card_right_top">
+                                <div class="search__card_logo"></div>
+                            </div>
+                            <div class="search__card_right_bottom">
+                                <div class="search__card_oldprice">2200грн</div>
+                                <div class="search__card_newprice">1800грн</div>
+                            </div>
+                        </div>
+                    </div> -->
                 </div>
             </div>
             <div class="swiper mySwiper">
