--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </div>
             <div class="search__popup" id="search__popup">
                 <div class="search__popup_top">
-                    <input type="search" placeholder="Введіть назву товару або номер якого бажаєте знайти..." class="popup__search_input">
+                    <input type="search" placeholder="Введіть назву товару який бажаєте знайти..." class="popup__search_input">
                     <div class="popup__close_fill" id="search__close">
                         <div class="popup__close"></div>
                     </div>
@@ -163,7 +163,7 @@
                     <div class="main__filtr_item" id="withJewerly">З прикрасами</div>
                     <div class="main__filtr_item" id="withoutJewerly">Без прикрас</div>
                     <div class="main__filtr_item" id="pricePlus">Від дешевих до дорогих</div>
-                    <div class="main__filtr_item" id="priceMinus">Від дешевих до дорогих</div>
+                    <div class="main__filtr_item" id="priceMinus">Від дорогих до дешевих</div>
                     <div class="main__filtr_fill">
                         <div class="main__filter_item_filtr"></div>
                     </div>
