add burger popup

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Santa's Trees | Kyiv</title>
+    <title>Santa's Trees! | Kyiv</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="shortcut icon" href="./img/santa.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.3/jquery.min.js" integrity="sha512-STof4xm1wgkfm7heWqFJVn58Hm3EtS31XFaagaa8VMReCXAkQnJZ+jEy8PCC/iT18dFy95WcExNHFTqLyp72eQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -26,9 +26,9 @@
                 <div class="header__logo_text">Santa's<br> Trees!</div>
             </div>
             <select id="select" class="header__select">
-                <option value="0" selected>Kyiv</option>
-                <option value="1">Lviv</option>
-                <option value="2">Sambir</option>
+                <option selected>Kyiv</option>
+                <option>Lviv</option>
+                <option>Sambir</option>
             </select>
             <nav class="header__nav">
                 <a href="#header" class="header__home header__a">Головна</a>
@@ -121,6 +121,17 @@
                             </div>
                         </div>
                     </div> -->
+                </div>
+            </div>
+            <div class="burger__popup" id="burger__popup">
+                <div class="burger__popup_wrap">
+                    <div class="burger__popup_navigation">
+                        <a href="#home" class="burger__popup_a burger__popup_item">Головна</a>
+                        <a href="#catalog" class="burger__popup_a burger__popup_item">Каталог</a>
+                        <a href="#about" class="burger__popup_a burger__popup_item">Про нас</a>
+                        <div class="burger__popup_favourite burger__popup_item">Улюблені</div>
+                        <div class="burger__popup_basket">Корзина</div>
+                    </div>
                 </div>
             </div>
             <div class="swiper mySwiper">
