--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                         <a href="#catalog" class="burger__popup_a burger__popup_item">Каталог</a>
                         <a href="#about" class="burger__popup_a burger__popup_item">Про нас</a>
                         <div class="burger__popup_favourite burger__popup_item">Улюблені</div>
+                        <div class="burger__popup_messange burger__popup_item">Повідомлення</div>
                         <div class="burger__popup_basket">Корзина</div>
                     </div>
                 </div>
