add filtr popup

--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
                     </div>
                 </div>
             </div>
+            <div class="filtr__popup">
+                <div class="filtr__popup_wrap"></div>
+            </div>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
@@ -207,9 +210,9 @@
             <div class="footer__blocks">
                 <div class="footer_block">
                     <div class="footer__text_title">Навігація:</div>
-                    <a href="#" class="footer__a">Головна</a>
-                    <a href="#" class="footer__a">Каталог</a>
-                    <a href="#" class="footer__a">Про нас</a>
+                    <a href="#header" class="footer__a">Головна</a>
+                    <a href="#catalog" class="footer__a">Каталог</a>
+                    <a href="#about" class="footer__a">Про нас</a>
                 </div>
                 <div class="footer_block">
                     <div class="footer__text_title">Оформити замовлення:</div>
