add js filtr popup

--- a/index.html
+++ b/index.html
@@ -136,7 +136,23 @@
                 </div>
             </div>
             <div class="filtr__popup">
-                <div class="filtr__popup_wrap"></div>
+                <div class="filtr__popup_top">
+                    <h1 class="filtr__popup_h1">Фільтр</h1>
+                    <div class="popup__close_fill" id="filtr__close">
+                        <div class="popup__close"></div>
+                    </div>
+                </div>
+                <div class="filtr__popup_wrap">
+                    <div class="filtr__popup_nav">
+                        <div class="filtr__popup_item" id="filtrAll">Всі</div>
+                        <div class="filtr__popup_item" id="filtrGreen">Зелені</div>
+                        <div class="filtr__popup_item" id="filtrWhite">Білі</div>
+                        <div class="filtr__popup_item" id="filtrWithJewerly">З прикрасами</div>
+                        <div class="filtr__popup_item" id="filtrWithOutJewerly">Без прикрас</div>
+                        <div class="filtr__popup_item" id="filtrPlus">Від дешевих до дорогих</div>
+                        <div class="filtr__popup_item" id="filtrMinus">Від дорогих до дешевих</div>
+                    </div>
+                </div>
             </div>
             <div class="swiper mySwiper">
                 <div class="swiper-wrapper">
