add responsive html

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <a href="#about" class="burger__popup_a burger__popup_item">Про нас</a>
                         <div class="burger__popup_favourite burger__popup_item">Улюблені</div>
                         <div class="burger__popup_messange burger__popup_item">Повідомлення</div>
-                        <div class="burger__popup_basket">Корзина</div>
+                        <div class="burger__popup_basket burger__popup_item">Корзина</div>
                     </div>
                 </div>
             </div>
