add favorite popup

--- a/index.html
+++ b/index.html
@@ -67,26 +67,11 @@
                     </div>
                 </div>
                 <div class="popup__wrapper" id="popupwrap">
-                    <!-- <div class="popup__card">
-                        <div class="popup__card_close_fill">
-                            <div class="popup__card_close"></div>
-                        </div>
-                        <div class="popup__card_left">
-                            <img src="./img/1.png" class="popup__card_photo">
-                            <div class="popup__card_info">
-                                <div class="popup__card_text">#00</div>
-                                <div class="popup__card_id">#0001</div>
-                            </div>
-                        </div>
-                        <div class="popup__card_right">
-                            <div class="popup__card_price">1800uah</div>
-                            <div class="popup__card_addAmount">
-                                <div class="popup__card_add">-</div>
-                                <div class="popup__card_amount">1</div>
-                                <div class="popup__card_add">+</div>
-                            </div>
-                        </div>
-                    </div>  -->
+ 
+                </div>
+                <div class="popup__footer">
+                    <div class="popup__footer_price"></div>
+                    <div class="popup__footer_submit">Придбати</div>
                 </div>
             </div>
             <div class="search__popup" id="search__popup">
@@ -97,30 +82,7 @@
                     </div>
                 </div>
                 <div class="search__popup_wrap" id="search__wrap">
-                    <!-- <div class="search__card">
-                        <div class="search__card_left">
-                            <img src="./img/1.png" alt="" class="search__card_img">
-                            <div class="search__card_info">
-                                <div class="search__card_text">
-                                    <div class="search__card_name">Name</div>
-                                    <div class="search__card_id">#0001</div>
-                                </div>
-                                <div class="search__card_buttons">
-                                    <div class="search__card_button">До обраного</div>
-                                    <div class="search__card_button">Придбати</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="search__card_right">
-                            <div class="search__card_right_top">
-                                <div class="search__card_logo"></div>
-                            </div>
-                            <div class="search__card_right_bottom">
-                                <div class="search__card_oldprice">2200грн</div>
-                                <div class="search__card_newprice">1800грн</div>
-                            </div>
-                        </div>
-                    </div> -->
+
                 </div>
             </div>
             <div class="burger__popup" id="burger__popup">
@@ -152,6 +114,17 @@
                         <div class="filtr__popup_item" id="filtrPlus">Від дешевих до дорогих</div>
                         <div class="filtr__popup_item" id="filtrMinus">Від дорогих до дешевих</div>
                     </div>
+                </div>
+            </div>
+            <div class="favourite__popup">
+                <div class="favourite__popup_top">
+                    <h1 class="favourite__popup_h1">Улюблені</h1>
+                    <div class="popup__close_fill" id="favourite__close">
+                        <div class="popup__close"></div>
+                    </div>
+                </div>
+                <div class="favourite__popup_wrap">
+
                 </div>
             </div>
             <div class="swiper mySwiper">
