--- a/index.html
+++ b/index.html
@@ -229,3 +229,9 @@
 </html>
 <script src="./js/main.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("r93zkCnwbfUUls945");
+   })();
+</script>
