fix favourite poppup

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   <div class="swiper-slide">
                     <div class="main__banner">
                         <div class="main__banner_text">
-                            <div class="main__banner_subtitle">Peaceful sky above overhad!</div>
+                            <div class="main__banner_subtitle">Peaceful sky above overhead!</div>
                             <div class="main__banner_title">Happy New Year!</div>
                         </div>
                         <div class="main__banner_bottom">
