add message popup and done func for send message

--- a/index.html
+++ b/index.html
@@ -70,8 +70,11 @@
  
                 </div>
                 <div class="popup__footer">
-                    <div class="popup__footer_price"></div>
-                    <div class="popup__footer_submit">Придбати</div>
+                    <input type="text" class="popup__footer_input" id="input" placeholder="Введіть вашу пошту...">
+                    <div class="popup__footer_box">
+                        <div class="popup__footer_price"></div>
+                        <div class="popup__footer_submit">Придбати</div>
+                    </div>
                 </div>
             </div>
             <div class="search__popup" id="search__popup">
@@ -125,6 +128,17 @@
                 </div>
                 <div class="favourite__popup_wrap">
 
+                </div>
+            </div>
+            <div class="message__popup">
+                <div class="message__popup_top">
+                    <h1 class="message__popup_h1">Повідомлення</h1>
+                    <div class="popup__close_fill" id="message__close">
+                        <div class="popup__close"></div>
+                    </div>
+                </div>
+                <div class="message__popup_wrap">
+                    <h1 class="message__wrap_h1">Чек було відправлено на пошту успішно!</h1>
                 </div>
             </div>
             <div class="swiper mySwiper">
