--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div class="header__more">
                 <div class="header__fill header__bell_hover">
                     <div class="header__bell"></div>
+                    <div class="header__dot">1</div>
                 </div>
                 <div class="header__fill header__favourite_hover">
                     <div class="header__favourite"></div>
@@ -138,7 +139,7 @@
                     </div>
                 </div>
                 <div class="message__popup_wrap">
-                    <h1 class="message__wrap_h1">Чек було відправлено на пошту успішно!</h1>
+                    <div class="message__wrap_button">Прийняти</div>
                 </div>
             </div>
             <div class="swiper mySwiper">
