fix html, js code

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
             <div class="favourite__popup">
                 <div class="favourite__popup_top">
-                    <h1 class="favourite__popup_h1">Улюблені</h1>
+                    <h1 class="favourite__popup_h1">Обрані</h1>
                     <div class="popup__close_fill" id="favourite__close">
                         <div class="popup__close"></div>
                     </div>
